prevent overflow on NavButton Component

--- a/src/components/NavButton/styles.scss
+++ b/src/components/NavButton/styles.scss
@@ -8,4 +8,7 @@
     padding: 10px;
     margin: 10px;
     width: 280px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
